#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2020-2022, Intel Corporation
#

add_subdirectory(conn_cfg)
add_subdirectory(conn)
add_subdirectory(ep)
add_subdirectory(example)
add_subdirectory(log)
add_subdirectory(mr)
add_subdirectory(peer)
add_subdirectory(srq)
add_subdirectory(srq_cfg)
add_subdirectory(utils)
