#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2020, Intel Corporation
#

add_subdirectory(conn_req)
add_subdirectory(conn-test)
add_subdirectory(ep-test)
add_subdirectory(error-test)
add_subdirectory(flush-test)
add_subdirectory(info-test)
add_subdirectory(mr-test)
add_subdirectory(peer-test)
add_subdirectory(private_data-test)
add_subdirectory(template-test)
add_subdirectory(utils-test)
