#
# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2020, Intel Corporation
#

add_subdirectory(conn)
add_subdirectory(conn_cfg)
add_subdirectory(conn_req)
add_subdirectory(ep)
add_subdirectory(error)
add_subdirectory(flush)
add_subdirectory(info)
add_subdirectory(librpma_constructor)
add_subdirectory(log)
add_subdirectory(log_default)
#add_subdirectory(mr)
add_subdirectory(peer)
add_subdirectory(peer_cfg)
add_subdirectory(private_data)
add_subdirectory(template)
add_subdirectory(utils)
